--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@angular/platform-browser-dynamic": "~10.0.0",
     "@angular/router": "~10.0.0",
     "@capacitor/core": "2.4.6",
-    "@ionic-native/call-number": "^5.31.1",
+    "@ionic-native/call-number": "^5.35.0",
     "@ionic-native/core": "^5.0.0",
     "@ionic-native/network": "^5.31.1",
     "@ionic-native/splash-screen": "^5.0.0",
@@ -44,9 +44,8 @@
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
-    "call-number": "^1.0.1",
     "codelyzer": "^6.0.0",
-    "cordova-android": "^7.0.0",
+    "cordova-android": "^9.1.0",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-ionic-keyboard": "^2.2.0",
     "cordova-plugin-ionic-webview": "^4.2.1",
@@ -61,6 +60,7 @@
     "karma-coverage-istanbul-reporter": "~3.0.2",
     "karma-jasmine": "~3.3.0",
     "karma-jasmine-html-reporter": "^1.5.0",
+    "mx.ferreyra.callnumber": "0.0.2",
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
@@ -79,7 +79,8 @@
       },
       "cordova-plugin-ionic-keyboard": {},
       "cordova-plugin-network-information": {},
-      "mx.ferreyra.callnumber": {}
+      "mx.ferreyra.callnumber": {},
+      "call-number": {}
     },
     "platforms": [
       "android"
